--- a/derivadas.Rmd
+++ b/derivadas.Rmd
@@ -10,13 +10,14 @@ output:
 
 ```{r pacotes}
 library(Deriv) # Capaz de realizar derivadas e integrais
+library(ggplot2)
 
 ```
 
 ```{r derivada}
 
 # Define the function
-f <- function(x) (b*x)/(b+2*x)
+f <- function(x) sin(x)
 
 # Calculate the symbolic derivative
 derivada <- Deriv(f, "x")
@@ -24,11 +25,30 @@ derivada <- Deriv(f, "x")
 # Exiba a derivada
 derivada
 
-plot(f)
-plot(derivada)
-
 # Derivada para um valor
-derivada(2)
+derivada(0)
+
+x_vals <- seq(-100, 100, length.out = 100)
+
+# Calcula os valores das funções e derivadas para os valores de x
+f_vals <- f(x_vals)
+derivada_vals <- eval(derivada(x_vals))
+
+# Cria um dataframe com os valores de x e as funções
+dados <- data.frame(x = x_vals, f_x = f_vals, derivada_x = derivada_vals)
+
+# Cria o gráfico usando ggplot2
+grafico <- ggplot(dados, aes(x)) +
+  geom_line(aes(y = f_x, color = "Função")) +
+  geom_line(aes(y = derivada_x, color = "Derivada")) +
+  labs(x = "x", y = "y", color = "Legend") +
+  ggtitle("Gráfico da função e sua derivada") +
+  scale_color_manual(values = c("Função" = "blue", "Derivada" = "red"),
+                     labels = c("Função", "Derivada")) +
+  theme_minimal()
+
+# Exibe o gráfico
+print(grafico)
 ```
 
 
